Fix resize handler z-index

--- a/src/styles/floating-view.css
+++ b/src/styles/floating-view.css
@@ -61,6 +61,7 @@ floating-view:has(combat-log-viewer) {
 	position: absolute;
 	bottom: 0;
 	right: 0;
+	z-index: 1;
 	width: 16px;
 	height: 16px;
 	cursor: nwse-resize;
